cabal-version:       2.0
name:                koji
version:             0.0.0.0
synopsis:            Koji library
description:         Koji library
homepage:            https://github.com/juhp/koji
bug-reports:         https://github.com/juhp/koji/issues
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/juhp/koji.git

library
  hs-source-dirs:      src
  exposed-modules:     Koji
                       

  build-depends:       base >= 4.9.1.0 && < 5,
                       aeson,
                       aeson-optics,
                       bytestring,
                       optics-core,
                       text,
                       typed-process

  ghc-options:         -Wall

  default-language:    Haskell2010
