cabal-version:       2.0
name:                koji
version:             0.0.1
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/juhp/koji-hs
bug-reports:         https://github.com/juhp/koji-hs/issues
license:             GPL-2
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2020 Jens Petersen
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.1

source-repository head
  type:                git
  location:            https://github.com/juhp/koji-hs.git

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.Koji
                       Distribution.Koji.Internal

  build-depends:       base >= 4 && < 5
                     , haxr >= 3000.11.4
                     , mtl

  ghc-options:         -Wall

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
